--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         Oops! Something went wrong. Please refresh the screen and try again.
                     </div>
                     <div class="contact-form">
-                        <form id="contact-form" class="margin-clear" role="form">
+                        <form id="contact-form" class="margin-clear" role="form" method="POST" action="http://formspree.io/bc2367@gmail.com">
                             <div class="form-group has-feedback">
                                 <label for="name">Name*</label>
                                 <input type="text" class="form-control" id="name" name="name" placeholder="">
@@ -260,14 +260,11 @@
         </div>
     </footer>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- jQuery -->
-    <script src="js/template.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/modernizr.js"></script>
+    <script type="text/javascript" src="js/jquery.validate.js"></script>
+    <script type="text/javascript" src="js/template.js"></script>
 </body>
 
 </html>
