--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
                         Oops! Something went wrong. Please refresh the screen and try again.
                     </div>
                     <div class="contact-form">
-                        <form id="contact-form" class="margin-clear" role="form" method="POST" action="http://formspree.io/happydognatick@gmail.com">
+                        <form id="contact-form" class="margin-clear" role="form" data-rel="back"
+                              method="POST" action="http://formspree.io/happydognatick@gmail.com">
                             <div class="form-group has-feedback">
                                 <label for="name">Name*</label>
                                 <input type="text" class="form-control" id="name" name="name" placeholder="">
