--- a/index.html
+++ b/index.html
@@ -193,8 +193,18 @@
                                 <i class="fa fa-envelope form-control-feedback"></i>
                             </div>
                             <div class="form-group has-feedback">
-                                <label for="subject">Subject*</label>
-                                <input type="text" class="form-control" id="subject" name="subject" placeholder="">
+                                <label for="phone">Phone*</label>
+                                <input type="text" class="form-control" id="phone" name="phone" placeholder="">
+                                <i class="fa fa-navicon form-control-feedback"></i>
+                            </div>
+                            <div class="form-group has-feedback">
+                                <label for="address">Address*</label>
+                                <input type="text" class="form-control" id="address" name="address" placeholder="">
+                                <i class="fa fa-navicon form-control-feedback"></i>
+                            </div>
+                            <div class="form-group has-feedback">
+                                <label for="breed">Dog Breed(s)*</label>
+                                <input type="text" class="form-control" id="breed" name="breed" placeholder="">
                                 <i class="fa fa-navicon form-control-feedback"></i>
                             </div>
                             <div class="form-group has-feedback">
