--- a/index.html
+++ b/index.html
@@ -124,12 +124,13 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Services</h2>
-                    <p class="lead">Happy Dog is a home site pet daycare with indoor/outdoor areas for the dogs to enjoy.  The yards are fenced and have grass, not stone or mulch.</p>
-                    <p class="lead">The area is large and functional for lots of play and exercise.  With woods bordering the yard, there are sightings of wildlife....later giving the dogs fun dreams about chasing the bunnies and wild turkeys they have seen.</p>
-                    <p class="lead">We are a crate free daycare.</p>
+                    <p class="lead">Happy Dog is a home site dog day care with indoor/outdoor areas for your dogs to enjoy. The yards are fenced and have grass, not stone or mulch.</p>
+                    <p class="lead">Our services include morning pick up and late afternoon drop off, which fosters a healthy pack  mentality as well as prevents interruptions that customer drop offs can produce.</p>
+		    <p class="lead">The area is large and functional for lots of play and exercise. With woods bordering the yard, there are sightings of wildlife....later giving the dogs fun dreams about chasing the bunnies and wild turkeys they have seen.</p>
+                    <p class="lead">We are also a crate free day care.</p>
                     <p class="lead">We have on-site grooming service upon request without the use of crates - which means less stress for them and you.</p>
-                    <p class="lead">Dog training an integral part of Happy Dog daycare, as we utilize the daily situations that come up to help each dog achieve good individual manners and proper behavior in groups. We offer other training as needed.</p>
-                    <p class="lead">We have pick-up and take-home service for Happy Dogs.  More information about this service is available during interviews.</p>
+                    <p class="lead">Dog training is an integral part of Happy Dog day care, as we utilize the daily situations that come up to help each dog achieve good individual manners and proper behavior in groups. We offer other training as needed.</p>
+                    <p class="lead">More information about this service is available during interviews.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.jpg" alt="">
